# ComfyUI-pyscenedetect

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.agents/plans/: refactor-split-logic.md  status.json
docs/superpowers/plans/: 2026-04-28-comfyui-pyscenedetect.md  2026-05-08-max-scene-len-with-breath-split.md
docs/superpowers/specs/: 2026-04-28-comfyui-pyscenedetect-design.md
