[project]
name = "comfyui-pyscenedetect"
version = "0.1.0"
description = "Pyscenedetect nodes for ComfyUI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/z2661326707-sudo/ComfyUI-pyscenedetect"

[tool.comfy]
PublisherId = "zack"  
DisplayName = "ComfyUI-pyscenedetect"
