[project]
name = "comfyui-pyscenedetect"
version = "0.2.1"
description = "Scene detection and intelligent video splitting with vocal separation for ComfyUI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "demucs>=4.0.0",
    "pydub>=0.25.1",
    "scenedetect[opencv]>=0.6.4",
]

[project.urls]
Repository = "https://github.com/z2661326707-sudo/ComfyUI-pyscenedetect"

[tool.comfy]
PublisherId = "zack"  
DisplayName = "ComfyUI-pyscenedetect"
